tests/error/types/insert.stderr
error: incomplete query: missing insert value
 --> tests/error/types/insert.rs:5:10
  |
5 | #[derive(Insert)]
  |          ^^^^^^
  |
  = note: this error originates in the derive macro `Insert` (in Nightly builds, run with -Z macro-backtrace for more info)

error: conflicting attributes: #[sqly(skip, insert)]
  --> tests/error/types/insert.rs:12:12
   |
12 |     #[sqly(skip, insert = "")]
   |            ^^^^
